# slap

./: .gitignore  Alphabet.cxx  Alphabet.hxx  AlphabetParser.cxx  AlphabetParser.hxx  AlphabetReader.cxx  AlphabetReader.hxx  AlphabetString.cxx  AlphabetString.hxx  AlphabetSymbol.cxx  AlphabetSymbol.hxx  Constants.cxx  Constants.hxx  DFA.cxx  DFA.hxx  ExpNode.cxx  ExpNode.hxx  FSMInputParser.cxx  FSMInputParser.hxx  FSMTransition.cxx  FSMTransition.hxx  FSMTransitionTable.cxx  FSMTransitionTable.hxx  FiniteStateMachine.cxx  FiniteStateMachine.hxx  HopcroftDFAMinimizer.cxx  HopcroftDFAMinimizer.hxx  InputParser.cxx  InputParser.hxx  LexDesc.cxx  LexDesc.hxx  LexDescParser.cxx  LexDescParser.hxx  Makefile  Makefile.am  NFA.cxx  NFA.hxx  NFAToDFAConverter.cxx  NFAToDFAConverter.hxx  Parser.cxx  (+21 more)
tests/: dfa1.txt  dfa2.txt  dfa3.txt  dfa4.txt  dfa5.txt  dfa6.txt  dfa7.txt  lexdesc1.txt  lexdesc2.txt  lexdesc3.txt  lexdesc4.txt  nfa1.txt  nfa2.txt  nfa3.txt  nfa4.txt  regexp1.txt  regexp10.txt  regexp11.txt  regexp12.txt  regexp13.txt  regexp2.txt  regexp3.txt  regexp4.txt  regexp5.txt  regexp6.txt  regexp7.txt  regexp8.txt  regexp9.txt  simple.alpha  simple.dfa  simple.input0  test-dfa4.txt  test-nfa3.txt  test-regexp1.txt  test-regexp2.txt  test-regexp8.txt  whitespace.alpha
